--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,3 +6,126 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shared styles */
+.display-flex {
+  display: flex;
+}
+.text-primary {
+  color: rgb(255, 144, 14);
+}
+/* Dark 02 */
+.text-gray {
+  color: rgb(66, 66, 66);
+}
+/* Dark 03 */
+.dark-light-grey {
+  color: #727272;
+}
+.bg-light {
+  background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary {
+  background-color: rgb(255, 144, 14);
+  color: white;
+  font-size: 1.25rem;
+  padding: 18px 25px;
+  border-radius: 8px;
+  border: none;
+  font-weight: 600;
+}
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section {
+  margin-top: 130px;
+}
+
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+/* header styles */
+
+/* navbar related styles */
+
+.navbar {
+  justify-content: space-between;
+  align-items: center;
+}
+.brand {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.nav-item {
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.navbar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* banner related styles */
+.banner-content {
+  max-width: 862px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 70px;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image {
+  width: 100%;
+}
+
+/* team and feature related styles */
+.teams {
+  align-items: center;
+}
+.team-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+
+.our-features {
+  margin-left: 75px;
+  max-width: 562px;
+}
+
+#quick-list {
+  font-weight: 500;
+}
+/* responsive media query */
+@media screen and (max-width: 576px) {
+  .navbar,
+  .nav-links,
+  .teams {
+    flex-direction: column;
+  }
+  .team-img-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features {
+    margin-left: 20px;
+  }
+}
+/* medium size devices */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams {
+    flex-direction: column;
+  }
+  .our-features {
+    margin-left: 50px auto;
+  }
+}
