--- a/styles/architects.css
+++ b/styles/architects.css
@@ -106,6 +106,38 @@ main > section {
 #quick-list {
   font-weight: 500;
 }
+
+/* some facts related styles */
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card {
+  border: 1px solid rgb(255, 144, 14);
+  border-radius: 8px;
+  width: 240px;
+  height: 240px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.fact-number {
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.fact-name {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.facts-description {
+  max-width: 540px;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
   .navbar,
