added card features

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -107,6 +107,25 @@ main > section {
   font-weight: 500;
 }
 
+/* features section related styles */
+.features {
+  gap: 140px;
+}
+#features-section-title {
+  border-left: 5px solid rgb(255, 144, 14);
+  padding-left: 20px;
+}
+.feature-card {
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+}
+.feature-card .feature-title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
 /* some facts related styles */
 .facts-container {
   display: grid;
@@ -138,6 +157,20 @@ main > section {
 .facts-description {
   max-width: 540px;
 }
+
+/* sponsor related styles */
+.sponsors-info {
+  max-width: 540px;
+  margin: 0 auto;
+  text-align: center;
+}
+.sponsor-companies {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img {
+  filter: grayscale(100%);
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
   .navbar,
@@ -145,19 +178,33 @@ main > section {
   .teams {
     flex-direction: column;
   }
-  .team-img-container {
+  .team-img-container .facts-container .sponsor-companies {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .facts-container {
+    justify-items: center;
+    gap: 20px;
+  }
+  .sponsor-companies .facts-container {
+    grid-template-columns: repeat(2, 1fr);
   }
   .our-features {
     margin-left: 20px;
   }
 }
 /* medium size devices */
-@media screen and (min-width: 576px) and (max-width: 992px) {
+@media screen and (max-width: 576px) {
   .teams {
     flex-direction: column;
   }
+
   .our-features {
-    margin-left: 50px auto;
+    margin-left: auto;
+    margin-right: 50px;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
   }
 }
