--- a/styles/architects.css
+++ b/styles/architects.css
@@ -125,6 +125,17 @@ main > section {
   font-weight: 600;
   margin-bottom: 10px;
 }
+#experiance-badge {
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -90px;
+  margin-top: -100px;
+}
+#experiance-year {
+  font-size: 3rem;
+  font-weight: 700;
+}
 
 /* some facts related styles */
 .facts-container {
@@ -175,6 +186,7 @@ main > section {
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-links,
+  .features,
   .teams {
     flex-direction: column;
   }
